Adding Manage List API
